--- a/all.css
+++ b/all.css
@@ -100,6 +100,9 @@
     color: white;
     writing-mode: vertical-lr;
 }
+.content-text-color{
+    color:  rgba(0, 127,255, 1);
+}
 .footer-bg{
     background-color: rgb(222, 250, 255)
 }
