--- a/all.css
+++ b/all.css
@@ -78,6 +78,12 @@
     height: 300px;
     background-color: rgb(222, 250, 255);
 }
+@media (max-width: 769px) {
+    .bg-primary-content{
+        height: 470px;
+        background-color: rgb(222, 250, 255);
+    }
+}
 .img-fluid{
     margin-top: -28px;
 }
@@ -101,6 +107,7 @@
     writing-mode: vertical-lr;
 }
 .content-text-color{
+    
     color:  rgba(0, 127,255, 1);
 }
 .footer-bg{
